k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-basic
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.coolstore.aks
    http:
      paths:
      - backend:
          serviceName: graph-api
          servicePort: 80
        path: /
